--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
     "framer-motion": "^10.18.0",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.303.0",
     "next": "^16.0.10",
     "next-auth": "^5.0.0-beta.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "sharp": "^0.34.5",
     "svix": "^1.82.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
