--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@stripe/stripe-js": "^8.6.0",
     "@supabase/supabase-js": "^2.87.3",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -49,6 +50,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "sharp": "^0.34.5",
+    "stripe": "^20.1.0",
     "svix": "^1.82.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
