--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "resend": "^6.6.0",
     "sharp": "^0.34.5",
     "stripe": "^20.1.0",
     "svix": "^1.82.0",
