--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next-auth": "^5.0.0-beta.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.49.2",
     "resend": "^6.6.0",
     "sharp": "^0.34.5",
