--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# Email (Resend) - Required for contact form
+RESEND_API_KEY=re_your_resend_api_key_here
+RESEND_FROM_EMAIL=notifications@littlegrapplers.net
+
 # Stripe Payment Integration
 STRIPE_SECRET_KEY=sk_live_your_secret_key_here
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_live_your_publishable_key_here
