--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "svix": "^1.82.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "tus-js-client": "^4.3.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
